--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,12 @@
     z-index: 0;
 }
 
+section {
+    min-height: 100vh;
+    padding: 1rem 7%;
+    padding-top: 6rem;
+}
+
 html {
     font-size: 62.5%;
 }
@@ -182,6 +188,30 @@ header #menu {
 
 .login-form form .fa-times:hover {
     color: var(--silver444);
+}
+
+.home {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: column;
+    background: url('utils/home-bg.jpg') no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    position: relative;
+}
+
+.home h1 {
+    font-size: 6rem;
+    color: var(--violetcbf);
+}
+
+.home p {
+    font-size: 1.9rem;
+    color: var(--seilver999);
+    padding: 1rem 0;
+    width: 70rem;
 }
 
 
