--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
     --silver222: #222;
 }
 
+/* Inicio Estilos Globais */
 * {
     font-family: 'Open Sans', sans-serif;
     margin: 0;
@@ -22,6 +23,7 @@
     text-transform: capitalize;
     transition: all .2s linear;
 }
+
 
 *::selection {
     background-color: var(--violet96c);
@@ -51,7 +53,9 @@ section {
 html {
     font-size: 62.5%;
 }
+/* Fim Estilos Globais */
 
+/* Inicio Menu Header */
 header {
     width: 100%;
     display: flex;
@@ -98,7 +102,7 @@ header #login {
 }
 
 header #login:hover {
-    color: var(--orangee00);
+    color: var(--silver444);
 }
 
 header #menu {
@@ -107,7 +111,9 @@ header #menu {
     cursor: pointer;
     display: none;
 }
+/* Fim Menu Header */
 
+/* Inicio Formulario Login */
 .login-form {
     width: 100%;
     height: 100%;
@@ -189,7 +195,9 @@ header #menu {
 .login-form form .fa-times:hover {
     color: var(--silver444);
 }
+/* Fim Formulario Login */
 
+/* Inicio Seção Home */
 .home {
     display: flex;
     align-items: center;
@@ -213,6 +221,40 @@ header #menu {
     padding: 1rem 0;
     width: 70rem;
 }
+/* Fim Seção Home */
+
+/* Inicio Seção Sobre */
+.sobre {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: wrap;
+}
+
+.sobre .image {
+    flex: 1 1 40rem;
+}
+.sobre .image img {
+    height: 65vh;
+    width: 100%;
+}
+
+.sobre .content {
+    flex: 1 1 40rem;
+}
+
+.sobre .content h3 {
+    font-size: 3.5rem;
+    color: var(--violetcbf);
+}
+
+.sobre .content p {
+    font-size: 1.5rem;
+    color: var(--silver777);
+    padding: 1rem 0;
+}
+
+/* Fim Seção Sobre */
 
 
 
@@ -224,6 +266,19 @@ header #menu {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+/* Inicio Responsividade */
 @media (max-width: 768px) {
     html {
         font-size: 55%;
@@ -269,3 +324,4 @@ header #menu {
         top: 6.4rem;
     }
 }
+/* Fim Responsividade */
