--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root {
     --gradient: linear-gradient(90deg, var(--violet96c), var(--violetcbf));
     --white:#fff;
-    --orangee00:#ff9e00;
+    --orangee00:#ff6d00;
     --silver333:#333;
     --silver777:#777;
     --seilver999:#999;
@@ -52,12 +52,22 @@ section {
 
 html {
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
+
+h3 {
+    font-size: 3.5rem;
+    color: var(--violetcbf);
+    text-align: center;
+    font-weight: bold;
+}
+
 /* Fim Estilos Globais */
 
 /* Inicio Menu Header */
 header {
     width: 100%;
+    height: 80px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -72,6 +82,10 @@ header {
 header .logo {
     color: var(--white);
     font-size: 2.5rem;
+}
+
+header .ipti-logo {
+    width: 40px;
 }
 
 header .navbar ul {
@@ -102,7 +116,7 @@ header #login {
 }
 
 header #login:hover {
-    color: var(--silver444);
+    color: var(--orangee00);
 }
 
 header #menu {
@@ -203,7 +217,7 @@ header #menu {
     align-items: center;
     justify-content: center;
     flex-flow: column;
-    background: url('utils/home-bg.jpg') no-repeat;
+    background: url('https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/v882-aew-56_1_1.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&auto=format&ixlib=js-2.2.1&s=492c82440326077fd357c31c7aac2f50') no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -212,12 +226,12 @@ header #menu {
 
 .home h1 {
     font-size: 6rem;
-    color: var(--violetcbf);
+    color: var(--orangee00);
 }
 
 .home p {
     font-size: 1.9rem;
-    color: var(--seilver999);
+    color: var(--white);
     padding: 1rem 0;
     width: 70rem;
 }
@@ -255,6 +269,89 @@ header #menu {
 }
 
 /* Fim Seção Sobre */
+
+
+/* Inicio Seção Curso */
+
+.curso .box-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: wrap;
+}
+
+.curso .box-container .box {
+    width: 35rem;
+    border: .1rem solid rgba(0, 0, 0, .4);
+    border-radius: 0.4rem;
+    position: relative;
+    margin: 1.5rem;
+}
+
+.curso .box-container .box img {
+    height: 20rem;
+    width: 100%;
+    object-fit: cover;
+}
+
+.curso .box-container .box .content {
+    padding: 1rem;
+}
+
+.curso .box-container .box .content .stars i {
+    color: var(--orangee00);
+    font-size: 1.7rem;
+    padding: 1rem .1rem;
+}
+
+.curso .box-container .box .content .title {
+    color: var(--violet96c);
+    font-size: 2.1rem;
+    font-weight: bold;
+}
+
+.curso .box-container .box .content .title:hover {
+    text-decoration: underline;
+}
+
+.curso .box-container .box .content p {
+    padding: 1rem 0;
+    color: var(--silver777);
+    font-size: 1.5rem;
+}
+
+.curso .box-container .box .content .info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: .5rem;
+    border-top: .1rem solid rgba(0, 0, 0, .3);
+}
+
+.curso .box-container .box .content .info h3 {
+    font-size: 1.5rem;
+    padding: 1rem;
+    color: var(--silver777);
+}
+
+.curso .box-container .box .content .info h3 i {
+    color: var(--orangee00);
+}
+
+.curso .box-container .box .price {
+    position: absolute;
+    top: 16rem; right: 1rem;
+    height: 8rem;
+    width: 8rem;
+    line-height: 8rem;
+    text-align: center;
+    border-radius: 50%;
+    background: var(--gradient);  
+    color: var(--white);
+    font-size: 3rem;
+}
+
+/* Fim Seção Curso */
 
 
 
