--- a/styles.css
+++ b/styles.css
@@ -250,7 +250,7 @@ header #menu {
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-flow: wrap;
+    flex-flow: wrap-reverse;
 }
 
 .sobre .image {
@@ -592,6 +592,10 @@ header #menu {
 
     .contato .row .image img  {
         display: none; 
+    }
+
+    .sobre .image img {
+        margin-top: 3rem;
     }
 }
 
